增加flume sink到本地文件系统插件

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>carefree-application</module>
         <module>user-stay-duration</module>
         <module>iop-streaming</module>
+        <module>file-sink</module>
     </modules>
     <properties>
         <scala.version>2.11.8</scala.version>
