--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>iop-streaming</module>
         <module>file-sink</module>
         <module>tour-repair</module>
+        <module>iop-export-hbase</module>
     </modules>
     <properties>
         <scala.version>2.11.8</scala.version>
