修复智能短信自动化配置驻留时长存在的重大bug问题

--- a/bigdata-utils/pom.xml
+++ b/bigdata-utils/pom.xml
@@ -149,6 +149,12 @@
             <artifactId>hutool</artifactId>
             <version>${hutool-version}</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>tv.cntt</groupId>-->
+            <!--<artifactId>chill-scala_2.11</artifactId>-->
+            <!--<version>1.2</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 
